--- a/course-04/exercises/lesson-5/starter-code/serverless.yml
+++ b/course-04/exercises/lesson-5/starter-code/serverless.yml
@@ -1,5 +1,6 @@
-service:
-  name: serverless-udagram-app
+org: lavender151
+app: tantt5-serverless-todo-app
+service: tantt5-serverless-todo-app
 
 plugins:
   - serverless-webpack
