--- a/course-04/project/c4-final-project-starter-code/client/package.json
+++ b/course-04/project/c4-final-project-starter-code/client/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.21.1",
     "dateformat": "^3.0.3",
     "immutability-helper": "^3.0.0",
+    "js-file-download": "^0.4.12",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
